# clay-components

./: CMakeLists.txt  README.md  deps.nix  flake.nix  justfile
.github/workflows/: ci.yaml
data/: script.js
include/: dashboard.hpp  demo.hpp  js.hpp  layout_components.hpp  layout_engine.hpp  memory_arena.hpp  ui_engine.hpp  utils.hpp
public/: index.html  style.css
src/: demo.cpp  layout_components.cpp  layout_engine.cpp  main.cpp  ui_engine.cpp  utils.cpp
src/components/: button.cpp  checkbox.cpp  dropdown.cpp  hero.cpp  input.cpp  introduction.cpp  modal.cpp  navbar.cpp  tabs.cpp  tooltip.cpp
src/dashboard/: context_menu.cpp  dashboard.cpp
src/dashboard/body/: body.cpp  navbar.cpp  navbar_button.cpp  table.cpp
src/dashboard/sidebar/: body.cpp  footer.cpp  header.cpp  sidebar.cpp  sidebar_dropdown.cpp
src/demo/: button.cpp  button.cpp.bak  checkbox.cpp  checkbox.cpp.bak  demo.cpp  dropdown.cpp  input.cpp  modal.cpp  tabs.cpp  tooltip.cpp
src/layout_components/: button.cpp  checkbox.cpp  code_block.cpp  context_menu.cpp  dropdown.cpp  input.cpp  modal.cpp  tabs.cpp  tooltip.cpp
